--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -6,7 +6,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-elixir@v1
+      - uses: actions/setup-beam@v1
         with:
           otp-version: '22.2'
           elixir-version: '1.9.4'
